--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -154,9 +154,9 @@ In einem beliebigen Dreieck gelten abgewandelte Formen der aus der 8. Klasse bek
         \draw[color=black] (6.7,-0.44) node {$a$};
         \draw[color=black] (1.76,-0.08) node {$b$};
         \draw[color=black] (4.06,-2.28) node {$c$};
-        \draw[color=qqwuqq] (4.4,1.05) node {$\gamma$};
-        \draw[color=qqwuqq] (0.7,-2.45) node {$\alpha$};
-        \draw[color=qqwuqq] (7.5,-2.2) node {$\beta$};
+        \draw[color=black] (4.4,1.05) node {$\gamma$};
+        \draw[color=black] (0.7,-2.45) node {$\alpha$};
+        \draw[color=black] (7.5,-2.2) node {$\beta$};
       \end{scriptsize}
     \end{tikzpicture}
   \end{minipage}
@@ -233,56 +233,64 @@ In der Kursstufe beschränken wir uns auf die Benutzung von Polarkoordinaten fü
 
 
 
-\section{Beispiel einer Funktionsdiskussion}
+\section{Beispiele einer Funktionsdiskussion}
+
+\subsection{$f(x)=2\cos(x)+2\sin(x)\cos(x)$}
 Sei die Funktion $f(x)=2\cos(x)+2\sin(x)\cos(x)$, ihr Schaubild sei K.\\
 Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achse, sowie Extrem- und Wendepunkte. Zeichnen Sie K im Intervall $[0;2\pi]$. Untersuchen Sie K auf Symmetrie.
-
-\subsection{Definitionsmenge}
-  $D=\R$
-
-\subsection{Periodizität und Amplitude}
-Die Periode von $f$ ist $P=2\pi$. Die Amplitude $A$ beträgt $\dfrac{3}{2}\sqrt{3}$.
+\\\\
+\begin{tabular}{ p{0.5\textwidth} | p{0.5\textwidth} }
+  \textbf{Definitionsmenge}  & \textbf{Periodizität und Amplitude}                                                   \\
+  $D = \R$                  & Die Periode von $f$ ist $P=2\pi$. Die Amplitude $A$ beträgt $\dfrac{3}{2}\sqrt{3}$.   \\
+\end{tabular}
 \\
 
-\subsection{Nullstellen}
-\subsubsection{Notwendige und hinreichende Bedingung:}
-\begin{align*}
-  f(x)                                        &=0\\
-  \Leftrightarrow 2\cos(x)+2\sin(x)\cos(x)    &=0\\
-  \Leftrightarrow 2\cos(x)(1+\sin(x))         &=0\\
-  \stackrel{S.d.N}{\Rightarrow}
-  \left\{\begin{array}{rccl}
-    2\cos(x)  &=  &0  & \\
-    1+\sin(x) &=  &0  &
-  \end{array} \\
-  \Leftrightarrow
-  \left\{ \begin{array}{rccl}
-    \cos(x) & = & 0 \\
-    \sin(x) & = & -1
-  \end{array} \\
-  \Leftrightarrow
-  \left\{ \begin{array}{rccl}
-    x_1&=&\dfrac{1}{2}\pi&  \\\\
-    x_2&=&\dfrac{3}{2}\pi&
-  \end{array} \\
-  \Rightarrow \mathbb{L} &= \left \{ \left( \dfrac{1}{2} \pi \right| 0 \right) ; \left( \dfrac{3}{2} \pi \right| 0 \right) \right\}\\
-\end{align*}
-
-\subsection{Ableitungen}
-  \begin{align*}
-    f'(x)&=-2\sin(x)+2(\cos(x)\cos(x)-\sin(x)\sin(x))\\
-    &=-2\sin(x)+2(\cos^2(x)-\sin^2(x))\\
-    &=-2\sin(x)+2(1-\sin^2(x)-\sin^2(x))\\
-    &=-4\sin^2(x)-2\sin(x)+2\\
-    f''(x)&=-4(\cos(x)\sin(x)+\sin(x)\cos(x))-2\cos(x)\\
-    &=-8\sin(x)\cos(x)-2\cos(x)\\
-    f'''(x)&=-8(\cos(x)\cos(x)-\sin(x)\sin(x))+2\sin(x)\\
-    &=-8(1-\sin^2(x)-\sin^2(x))+2\sin(x)\\
-    &=16\sin^2(x)+2\sin(x)-8
-  \end{align*}
-\subsection{Extremstellen}
 \begin{minipage}[t]{0.5\textwidth}
-  \subsubsection{Notwendige Bedingung:}
+  \textbf{Nullstellen}\\
+  \underline{Notwendige und hinreichende Bedingung:}\\
+  \begin{align*}
+    f(x)                                        &=0\\
+    \Leftrightarrow 2\cos(x)+2\sin(x)\cos(x)    &=0\\
+    \Leftrightarrow 2\cos(x)(1+\sin(x))         &=0\\
+    \stackrel{S.d.N}{\Rightarrow}
+    \left\{\begin{array}{rccl}
+      2\cos(x)  &=  &0  & \\
+      1+\sin(x) &=  &0  &
+    \end{array} \\
+    \Leftrightarrow
+    \left\{ \begin{array}{rccl}
+      \cos(x) & = & 0 \\
+      \sin(x) & = & -1
+    \end{array} \\
+    \Leftrightarrow
+    \left\{ \begin{array}{rccl}
+      x_1&=&\dfrac{1}{2}\pi&  \\\\
+      x_2&=&\dfrac{3}{2}\pi&
+    \end{array} \\
+    \Rightarrow \mathbb{L} &= \left \{ \left( \dfrac{1}{2} \pi \middle| 0 \right) ; \left( \dfrac{3}{2} \pi \middle| 0 \right) \right\}
+  \end{align*}
+\end{minipage}
+\vline
+\begin{minipage}[t]{0.5\textwidth}
+  \textbf{Ableitungen}\\
+    \begin{align*}
+      f'(x)&=-2\sin(x)+2(\cos(x)\cos(x)-\sin(x)\sin(x))\\
+      &=-2\sin(x)+2(\cos^2(x)-\sin^2(x))\\
+      &=-2\sin(x)+2(1-\sin^2(x)-\sin^2(x))\\
+      &=-4\sin^2(x)-2\sin(x)+2\\
+      f''(x)&=-4(\cos(x)\sin(x)+\sin(x)\cos(x))-2\cos(x)\\
+      &=-8\sin(x)\cos(x)-2\cos(x)\\
+      f'''(x)&=-8(\cos(x)\cos(x)-\sin(x)\sin(x))+2\sin(x)\\
+      &=-8(1-\sin^2(x)-\sin^2(x))+2\sin(x)\\
+      &=16\sin^2(x)+2\sin(x)-8
+    \end{align*}#
+\end{minipage}
+\\\\
+
+\textbf{Extremstellen}\\
+
+\begin{minipage}[t]{0.5\textwidth}
+  \underline{Notwendige Bedingung:}\\
     $f'(x)&=0$\\
     $\Leftrightarrow4\sin^2(x)-2\sin(x)+2&=0$\\
     Substitution: $y&=\sin(x)$\\
@@ -298,7 +306,7 @@ Die Periode von $f$ ist $P=2\pi$. Die Amplitude $A$ beträgt $\dfrac{3}{2}\sqrt{
 \end{minipage}
 \vline
 \begin{minipage}[t]{0.5\textwidth}
-  \subsubsection{Hinreichende Bedingung:}
+  \underline{Hinreichende Bedingung:}\\
     $f''(x)&\neq0$\\
     \Rightarrow
     \left\{\begin{array}{rccl}
@@ -319,12 +327,15 @@ Die Periode von $f$ ist $P=2\pi$. Die Amplitude $A$ beträgt $\dfrac{3}{2}\sqrt{
       8*(-1)(0)-2(0)&\stackrel{!}{=}&0& \Rightarrow \text{kein } EP
     \end{array}\right\\
 \end{minipage}
-\subsubsection{Ergebnis}
+\underline{Ergebnis}\\
 Auf dem Intervall $[0;2\pi]$  besitzt K den Hochpunkt H$\left(\dfrac{1}{6}\pi|f\left(\dfrac{1}{6}\pi\right)\right)$ und den Tiefpunk T$\left(\dfrac{5}{6}\pi|f\left(\dfrac{5}{6}\pi\right)\right)$.\\
 $\Leftrightarrow$ H$\left(\dfrac{1}{6}\pi|\dfrac{3}{2}\sqrt{3}\right)$ und T$\left(\dfrac{5}{6}\pi|-\dfrac{3}{2}\sqrt{3}\right)$.
-\subsection{Wendestellen}
+\\\\
+
+\textbf{Wendestellen}\\
+
 \begin{minipage}[t]{0.5\textwidth}
-  \subsubsection{Notwendige Bedingung:}
+  \underline{Notwendige Bedingung:}\\
   \begin{align*}
     f''(x)=0\\
     \Leftrightarrow -8\sin(x)\cos(x)-2\cos(x)=0\\
@@ -339,7 +350,7 @@ $\Leftrightarrow$ H$\left(\dfrac{1}{6}\pi|\dfrac{3}{2}\sqrt{3}\right)$ und T$\le
 \end{minipage}
 \vline
 \begin{minipage}[t]{0.5\textwidth}
-  \subsubsection{Hinreichende Bedingung:}
+  \underline{Hinreichende Bedingung:}\\
     $f'''(x)&\neq0$\\
     \Rightarrow
     \left\{\begin{array}{rccl}
@@ -367,10 +378,13 @@ $\Leftrightarrow$ H$\left(\dfrac{1}{6}\pi|\dfrac{3}{2}\sqrt{3}\right)$ und T$\le
   Außerdem: $f'\left(\dfrac{3}{2}\pi\right)=0\Rightarrow$ Sattelpunkt
 \end{Bemerkung}
 
-\subsubsection{Ergebnis}
-Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $\left(\dfrac{1}{2}\pi|f\left(\dfrac{1}{2}\pi\right)\right)$, $(3,394|f(3,394))$, $(6,031|f(6,031))$ und den Sattelpunkt $\left(\dfrac{3}{2}\pi|f\left(\dfrac{3}{2}\pi\right)\right)$.\\
-\Leftrightarrow $W_1\left(\dfrac{1}{2}\pi|0\right)$, $W_2(3,394|-1,452)$, $W_3(6,031|1,452)$, $S\left(\dfrac{3}{2}\pi|0\right)$.\\
-\subsection{Schaubild}
+\underline{Ergebnis}\\
+Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $\left(\dfrac{1}{2}\pi\middle|f\left(\dfrac{1}{2}\pi\right)\right)$, $(3,394|f(3,394))$, $(6,031|f(6,031))$ und den Sattelpunkt $\left(\dfrac{3}{2}\pi\middle|f\left(\dfrac{3}{2}\pi\right)\right)$.\\
+\Leftrightarrow $W_1\left(\dfrac{1}{2}\pi\middle|0\right)$, $W_2(3,394|-1,452)$, $W_3(6,031|1,452)$, $S\left(\dfrac{3}{2}\pi\middle|0\right)$.\\
+\\\\
+
+\textbf{Schaubild}\\
+
 \definecolor{ccqqqq}{rgb}{0.8,0,0}
 \definecolor{cqcqcq}{rgb}{0.75,0.75,0.75}
 \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
@@ -388,7 +402,10 @@ Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $\left(\dfrac{1}{2}\pi|f
   \clip(-0.62,-3.28) rectangle (7.22,3.26);
   \draw[line width=1.6pt,color=ccqqqq, smooth,samples=100,domain=-0.6249016652708163:7.217846281536262] plot(\x,{2*cos(((\x))*180/pi)+2*sin(((\x))*180/pi)*cos(((\x))*180/pi)});
 \end{tikzpicture}
-\subsection{Symmetrie}
+\\\\
+
+\textbf{Symmetrie}\\
+
 K ist punktsymmetrisch zu $W_1$, denn es gilt:
 \begin{align*}
   f(\dfrac{1}{2}\pi+x)&=-1*f(\dfrac{1}{2}\pi-x)\\
