--- a/main.tex
+++ b/main.tex
@@ -28,13 +28,12 @@
 \usepackage{epigraph}                             %Fürs Titelblatt
 %\usepackage{array}			                          %Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 \usepackage{tocloft,titletoc,titlesec}            %Fürs Inhaltsverzeichnis
+\usepackage{flowfram}                              %Für die Seitenangabe
+\usepackage{nopageno}                             %Same
 
 \pgfplotsset{compat=1.14}
 \usetikzlibrary{arrows}
 %\usetikzlibrary{fit}
-%Für die Seitenangabe
-\usepackage{flowfram}
-\usepackage{nopageno}
 
 \nonstopmode                                      %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
 
