--- a/style.tex
+++ b/style.tex
@@ -51,7 +51,7 @@
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
      skipabove=.5\baselineskip
-   ]\underline{Beispiel:}\\\\}
+   ]\underline{Beispiel:}\vspace{0.1cm}\\}
 {\end{mdframed}}
 
 %Bemerkung
@@ -64,7 +64,7 @@
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
      skipabove=.5\baselineskip
-   ]\underline{Bemerkung:}\\\\}
+   ]\underline{Bemerkung:}\vspace{0.1cm}\\}
 {\end{mdframed}}
 
 %GTR-Tipp
@@ -77,7 +77,7 @@
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
      skipabove=.5\baselineskip
-   ]\underline{GTR-Tipp:}\\\\}
+   ]\underline{GTR-Tipp:}\vspace{0.1cm}\\}
 {\end{mdframed}}
 
 %Codebox, aufrufbar mit \begin{lstlisting}[Name_der_Sprache]
